tooling/nargo_cli/tests/snapshots/execute__tests__regression_bignum_force_brillig_true_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "9377008657181771658",
  "abi": {
    "parameters": [],
    "return_type": null,
    "error_types": {
      "2920182694213909827": {
        "error_kind": "string",
        "string": "attempt to subtract with overflow"
      },
      "5019202896831570965": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      },
      "7233212735005103307": {
        "error_kind": "string",
        "string": "attempt to multiply with overflow"
      },
      "12049594436772143978": {
        "error_kind": "string",
        "string": "array ref-count underflow detected"
      },
      "14514982005979867414": {
        "error_kind": "string",
        "string": "attempt to bit-shift with overflow"
      },
      "16761564377371454734": {
        "error_kind": "string",
        "string": "Array index out of bounds"
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/+1aP4/jVBB/ju1skuW0EVQUfACEhOLYcZLuJHK3QHGigeoQ57VjiW+ARONPg4RoKOko6JGokCgoqJAoEaJl355n/csvYyd767csYkeK/OeNfzNv3sw8zzieacirj4G5BQnI5/XJuL4ewLh/+XtcX89uR9GY5PaJv5ol67Eyvx71j8c1pucGfyb4juw/O6lxPqgafJyLyB1d/k7h/HXT+Ier+cv6uZz/Gx1zFt95r3K3tpY2gB84wH/iRv/r2H3qBn8h+Odu8FPBf98JfpzbeLGx8in4E/vardY7K9My32ZRtswu5kWuxcqt8Lf5LM9m+Swr8m28uI5Fvy/81aKIy2Wezy9PtvF8DJi94BfFYp4nWRaXxXYdp4If9oUPlJbb7FGNOTQNebT2J8aFr82WHskztE6G5E9I175zg0fyRB+2j/iq2G6k6DpVxjw6HylyRoocDWvQI5bfI1bQI1bYE5alTfXy6PjdZyk+gT4kpPkL+jKTT9eot8XIAZf5hHrP37uUy5wGinwt9/4b+UPuTYzT97Lr/OGTPmwfzh+BouvU6PGE54EiJ1DkTJWxTfWA9SpYjn06eaTIFpIxzIvoy0xa/pB7Nn98CbjMxzLR90T+mdH3IkuO7TTjNQ1Ms6a+Yp+B0d/ThEK69wzs9CPND2O5K76nZt92bCvNJ9H+Uqdotg5asIL6x3ptKn2un9RH7V2zzzV7HXCN0ff4Q/Y4v4E9vBvaQ/ifkz2CO7SHyDo1TS0fVP3LX65extCVncEOnDNQfkj8F/X1pGUej19Rz3KZRWWcldkiK4okz9hOlgZgJ61evS/52VN0FzqUn38CXOZjmRgH4T21xW32qr8Bl/lY5v9tr/oC7ORir+IYe0S6G7NvS0c58+h3fpE/MU7XNurat3zFzlpcyLNTGrO0qRo+HvOVe4MHrN6xtDzntRxFDt9rqy3QT46JK0fvZkfHlci/q7jS1q8rroaKrlMas7SpGj4e6+r5PWD1h8W5UPC1o8jhe23xq8UV7nvyfczq9RU8g8/J+zA/KzVISPzfmAbz6/r8DHAN6XgK474y7rj/nopeo475ovyQ+L+tj/Z64+3aUOuha+vGOiA/zlv4xV4Y5yMaw+ckz4ot8du9C1tOwFaaLccwjvzf1UfNluMO2xizb8uJwo/zZltiP3pCWChHamjN9qzrsIWffUn4vzfN/M/r+Y8VGS7WDNdEW7NRi84/gM6yZlKfSI2Mse2ynr+kpdXjQ9CD824IcttiTsvhXX6ofZOamn2fOyGsQz3yJ9UuFuZ10VGrfQUX83rf/YlsGa/yeZIvLxZxFqc36k90veO96p6HWLKvHdrzfgZcsYelY/c84f/FNJh/tWCijtLP5HXDNR626PCUdBD+X+ujtfMLyh2OvhWnnB/RbjjvodnVWfh/A50532vvVtr6d+21OG/R58zsxxLHJeorz22qhiek+Qj/H/XRXv9OmFptrMW6Fs8B4LLPik0GpvEv/F8M7/2u+toe6Y39Ha3OD4n/T5rXCdiK15/9C9cA5aJPiE14zUTu1bfkWgDnFJSNMa6918oznPM452vzQj05HxzLL/MaGL3WZ37OTzyfIchvW0uv43n2N7/lWTznHqaB8/vaA/Dc6NPZA9Dy4UMP4L+H1WcPQNvze/yvy97/wyZGr3GCDn283vRJrvcdrk84xwxJHxwzPdqH+wNv1gLsdem12+Suehq+YhPW+S3Quaumw5xsKaiczEet6Xa+BZFOWkxq/3FhOyE/r40l7f95/F/Hrv3RUzDPq/177L9YC2Cd01aPvA3r94Lspr1zWvx3PF12Wz/AM7ps+aBuMd+tz4/t/wXKeNeaajUv56dhC39bTbIA292HHozWZ+IezPrIeMWcbCmonMxHjVd8F+d47ep7WrppD0ZsNlX4N9XuWFcd2FfNJrHVdw9mu1oXs3W5zaIomhez7aEeTN/yk0W2zLNlFK2TaJtEi0Pyz8QmVTOO/mnppL6WOo75BS8k/meQdz6iGAgVeZbvsw4+r+V4haHcC6rde+Nqn9+v9vlF9qTa11HGTmEMY8fSa/U12guxRI+Q+J9DbrY0gmfk+akif0Tyd/RW7mFMMJav3BN+uz4fU9zg3Puusa5kEj7eY93Ed1zE1Xy1Stfzi1myLPKySOK7jus0SaPVKlvlaV6uk/ziruXn67Rcx/FFFK+L7TpKD8n/BzVGjhlNOwAA",
  "debug_symbols": "ndvRThs7EIDhd8l1LuwZe2zzKkdVFSBUkaKAAhypQrx7NxW7VLGT6J+bqmn5tJB/iLKT3Y/V4/b+/dfP3eHp+XV199/Hav/8sHnbPR+mRx+f69X9cbff7379/PefV+H0R2x/v/71ZXM4PXx92xzfVndR2nq1PTxOf9Mw+afdfru6y+Hzx3olAYuIhWChWCQsMhaGRcGiYoGbK26uuLni5oqbK26uuLni5oqbK26uuHnCzdO4ebJZWDkXgoVikbDIWBgWw+YS45eQKOeiYtGoyAGLiIVgoVgkLDIWhgVunnHzjJsbbm64ueHmhpsbbm7j5mkR5fy31gyLgkXFolFRAhYRC8FCsUhY4OYFNy+4ecHNC25ex82bfAkN8VxELOSWsHOhWCQsMhbD5iphFtLORcGi3hCazkWjogUsIhUxDA+SFpKSdCRyIpwoJ4mTzIlxMpyvVBfSWkcqJw2TGDiJnAgnykniJHNinPD6kdePvL7w+sLrj1c1FucXcIvakcyJcVI4qZw0TMYLm+skciKcKCe8vvL6yusrr6+8vvL6iddPvH7i9ROvP17fWM4zydaRzIlxUjipnDRMxkuc6yRyIpwoJ7x+5vUzr595/czrZ17feH3j9Y3XN15/vG6xMq+grYaOjJ+xNp8Xl9Cdv4xXG1ePMt5tlFDmo8TcEeUkcZI5MU4KJ5WThsl4x1FinYnGjkROhBPlJHGSOTFObtUfkMpJw2S87bhOIn65aMKJcpI4yZwYJ4WTygl+GZfxGuo6iZwIJ7i+jJcqVeZJrlI7EjkRToYzVpcPOmsqHRnWr2U+3681dqRhMl5EXCeRk/EzZsuPX6UjykniJHNinBROKifj+m0mrfvYQcaLiCbze8uWtCOZE+OkcFI5aZiMVwTXSeSEdxmvCK4TnnJ8Jj4t5uf3PdPCvXvxG5+LTxvweX0xbba7aR6fjd9C0YPkAorfqHVIPSh50PiqmmnBs6CUO2QeVDyoelBzIAseFD1IPEg9KHmQZyLMMxHmmQjzTIR5JqJ4JqJ4JqJ4JqJ4JqJcmIj6jboPeqRkDzIPKh5UPag5UA0edGEilhXb5Purh8WD1IOSB2UPMg8qHlQ9qDlQCx7kmYjmmYh24Vrs5ZqG6UPc7m37eMlxC2UPMg9qHGm4cBl71gV1pzwakudIF54I+0a1R+ZBxYOqBzXHsxeDB0UP8sSN6kHJg7IHmQcVD6oe5JkI8UyE4In4nB79vznuNvf77dedVk/vh4d/brx6+/2yPbsH6+X4/LB9fD9uT3djfd+IdfqOVcNac/xxuhJreth03erpwekb0yzT/6XpmNNx/wA=",
  "file_map": {
    "50": {
      "source": "fn main() {\n    let numerator =\n        [790096867046896348, 1063071665130103641, 602707730209562162, 996751591622961462, 28650, 0];\n    unsafe { __udiv_mod(numerator) };\n\n    let denominator = [12, 0, 0, 0, 0, 0];\n    let result = unsafe { __validate_gt_remainder(denominator) };\n    assert(result[4] == 0);\n    assert(result[5] == 0);\n}\n\nunconstrained fn __udiv_mod(remainder_u60: [u64; 6]) {\n    let bit_difference = get_msb(remainder_u60);\n    let accumulator_u60: [u64; 6] = shl(bit_difference);\n}\n\nunconstrained fn __validate_gt_remainder(a_u60: [u64; 6]) -> [u64; 6] {\n    let mut addend_u60: [u64; 6] = [0; 6];\n    let mut result_u60: [u64; 6] = [0; 6];\n\n    for i in 0..6 {\n        result_u60[i] = a_u60[i] + addend_u60[i];\n    }\n\n    result_u60\n}\n\nunconstrained fn get_msb(val: [u64; 6]) -> u32 {\n    let mut count = 0;\n    for i in 0..6 {\n        let v = val[(6 - 1) - i];\n        if (v > 0) {\n            count = 60 * ((6 - 1) - i);\n            break;\n        }\n    }\n    count\n}\n\nunconstrained fn shl(shift: u32) -> [u64; 6] {\n    let num_shifted_limbs = shift / 60;\n    let limb_shift = (shift % 60) as u8;\n\n    let mut result = [0; 6];\n    result[num_shifted_limbs] = (1 << limb_shift);\n\n    for i in 1..(6 - num_shifted_limbs) {\n        result[i + num_shifted_limbs] = 0;\n    }\n    result\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/regression_bignum/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
